r189/sofa-dev : Added file extendingSofa to the documentation.
 //partial sync (2/3 changes)//

--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,8 @@ This is the documentation of the SOFA library. Chapter \ref{chapter:pba} gives t
 
 \include{sofaMechanical}
 
+\include{extendingSofa}
+
 \include{physicallyBasedAnimation}
 
 \include{appendices}
