r198/sofa-dev : Tutorial to add new objects in Sofa + 1D particles example
 //partial sync (1/2 changes)//

--- a/extendingSofa.tex
+++ b/extendingSofa.tex
@@ -269,7 +269,7 @@ Adding a new Mapping in \sofa{} requires the following steps:
 \item Have more fun!
 \end{enumerate}
 
-We will now detail these steps using the 1D -\> 3D mechanical mapping example.
+We will now detail these steps using the 1D to 3D mechanical mapping example.
 The code for this mapping is available in the \textbf{Sofa/doc/src\_examples/example3/LinearMapping.cpp} file.
 
 \subsection{Mapping Implementation}
