r208/sofa-dev : New examples with 1D+3D particles, Lennard-Jones fluid, and documentation update
 //partial sync (85/90 changes)//

--- a/macros_docu.tex
+++ b/macros_docu.tex
@@ -1,6 +1,6 @@
 % macros mathematiques
-\newcommand{\ma}[1]{\ensuremath{\mathbf #1}}
-\newcommand{\ve}[1]{\ensuremath{\mathbf #1}}
+\newcommand{\ma}[1]{\ensuremath{\mathbf {#1}}}
+\newcommand{\ve}[1]{\ensuremath{\mathbf {#1}}}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
