r220/sofa-dev : added articulated solids as a Contrib.
 //partial sync (16/53 changes)//

--- a/main.tex
+++ b/main.tex
@@ -31,8 +31,7 @@
 \newcommand{\textcode}[1]{{\small {\tt #1}}}
 
 % ---- liens entre le dvi généré et les fichiers sources latex
-
-\usepackage[active]{srcltx}
+%\usepackage[active]{srcltx}
 
 % ---- format de page A4
 	\setlength{\textwidth }{16cm}	% largeur de ligne
