r655/sofa-dev : Updated presentation

--- a/principles/principes.tex
+++ b/principles/principes.tex
@@ -320,31 +320,32 @@ Example: line mapping
 % 	\includegraphics[width=O.3\linewidth]{lineMapping-f.png}
 % 	\end{center}
 
-\begin{eqnarray*}
-v = \left(
-\begin{array}{cc}
-a & b
-\end{array}
-\right)
-\begin{array}{c}
-v_1 & v_2
-\end{array}
-\right)
-&=& J v
- \\
-\begin{array}{c}
-f_1 & f_2
-\end{array}
-\right)
-= 
-\begin{array}{c}
-a & b
-\end{array}
-\right)
-f
-&=& J^T f
-\end{eqnarray*}
-
+% $$
+% \begin{array}{rcl}
+% v = \left(
+% \begin{array}{cc}
+% a & b
+% \end{array}
+% \right)
+% \begin{array}{c}
+% v_1 & v_2
+% \end{array}
+% \right)
+% &=& J v
+%  \\
+% \begin{array}{c}
+% f_1 & f_2
+% \end{array}
+% \right)
+% = 
+% \begin{array}{c}
+% a & b
+% \end{array}
+% \right)
+% f
+% &=& J^T f
+% \end{array}
+% $$
 \end{frame}
 
 
